[gd_scene load_steps=3 format=3 uid="uid://tjcpv317acu0"]

[ext_resource type="Script" path="res://main.gd" id="1_thb8r"]
[ext_resource type="PackedScene" uid="uid://d38lf6y7yxkal" path="res://bg.tscn" id="2_kr4e5"]

[node name="Main" type="Node2D"]
position = Vector2(2, 0)
script = ExtResource("1_thb8r")

[node name="Load Game" type="Button" parent="."]
offset_left = 656.0
offset_top = 389.0
offset_right = 752.0
offset_bottom = 420.0
scale = Vector2(6.31502, 5.4761)
text = "Load Game"

[node name="New Game" type="Button" parent="."]
offset_left = 659.0
offset_top = 154.0
offset_right = 752.0
offset_bottom = 185.0
scale = Vector2(6.31502, 5.4761)
text = "New Game"

[node name="Quit Button" type="Button" parent="."]
offset_left = 828.0
offset_top = 632.0
offset_right = 870.0
offset_bottom = 663.0
scale = Vector2(6.31502, 5.4761)
text = "Quit"

[node name="ParallaxBackground" parent="." instance=ExtResource("2_kr4e5")]

[connection signal="pressed" from="Load Game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Quit Button" to="." method="_on_quit_button_pressed"]
